修改标题，修复分享页面按钮文字不居中问题

--- a/app.json
+++ b/app.json
@@ -6,7 +6,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "这破班上的值不值",
+    "navigationBarTitleText": "这P班上的值不值",
     "navigationBarTextStyle": "black"
   },
   "style": "v2",
