--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "work-value-calculator",
   "version": "1.0.0",
-  "description": "这破班上的值不值微信小程序",
+  "description": "这P班上的值不值微信小程序",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
